# control-block-diagram

./: LICENSE  README.md  example.py  pyproject.toml  requirements.txt  setup.py
control_block_diagram/: __init__.py  control_diagram.py
control_block_diagram/components/: __init__.py  component.py  text.py
control_block_diagram/components/blocks/: __init__.py  block.py
control_block_diagram/components/circles/: __init__.py  circle.py
control_block_diagram/components/connections/: __init__.py  connection.py  generate_connection.py  path.py
control_block_diagram/components/points/: __init__.py  center.py  input.py  output.py  point.py
control_block_diagram/components/text/: text.py
control_block_diagram/pdf_viewer/: __init__.py  pdf_viewer.py  pdf_viewer_nb.py  window.py
control_block_diagram/predefined_components/: __init__.py  predefined_components.py
control_block_diagram/predefined_components/control_blocks/: __init__.py  i_controller.py  limit.py  pi_controller.py
control_block_diagram/predefined_components/electric_components/: __init__.py
control_block_diagram/predefined_components/electric_motors/: __init__.py  electric_motor.py  pmsm.py  scim.py
control_block_diagram/predefined_components/electrical_motors/: __init__.py  pmsm.py
control_block_diagram/predefined_components/mathematical_components/: add.py  (+3 more)
controller-diagram/: __init__.py
controller-diagram/components/: __init__.py  text.py
examples/: Control_Block_Diagram_Hands_On.ipynb  flux_observer.py  fpga_example.py  induction_motor_controller.py  model_predictive_controller.py
(+40 files in other folders)
